Bug 143392 - Title on Base-Window doesn't show the name of the database.
Summary: Title on Base-Window doesn't show the name of the database.
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
7.2.0.1 rc
Hardware: All All
: high major
Assignee: Not Assigned
URL:
Whiteboard: target:7.3.0 target:7.2.3
Keywords: bibisected, bisected, regression
: 145177 (view as bug list)
Depends on:
Blocks:
 
Reported: 2021-07-15 15:01 UTC by Robert Großkopf
Modified: 2021-10-30 12:27 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
Have a look at the title of the screenshots LO 7.2.0.1 and LO 7.1.5.1: Name of database missing (90.77 KB, application/pdf)
2021-07-15 15:01 UTC, Robert Großkopf
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Robert Großkopf 2021-07-15 15:01:13 UTC
Created attachment 173607 [details]
Have a look at the title of the screenshots LO 7.2.0.1 and LO 7.1.5.1: Name of database missing

Open the attached screenshot of a database file. Is a screenshot from this database: https://bugs.documentfoundation.org/attachment.cgi?id=173603

The database doesn't show the name of the database in the title since LO 7.2.0.1 on OpenSUSE 15.2 64bit rpm Linux.

The title won't also be shown when opening a form.
Comment 1 Alex Thurgood 2021-07-16 08:28:10 UTC
Confirmed with

Version: 7.2.0.1 / LibreOffice Community
Build ID: 32efc3b7f3a71cfa6a7fa3f6c208333df48656cc
CPU threads: 8; OS: Mac OS X 10.16; UI render: default; VCL: osx
Locale: fr-FR (fr_FR.UTF-8); UI: en-US
Calc: threaded
Comment 2 Xisco Faulí 2021-07-20 14:17:00 UTC
Regression introduced by:

https://cgit.freedesktop.org/libreoffice/core/commit/?id=857caa5fc69b92e781457a1b67a89aa051c2d70f

author	Noel Grandin <noel@peralex.com>	2021-04-30 13:00:35 +0200
committer	Noel Grandin <noel.grandin@collabora.co.uk>	2021-04-30 16:03:35 +0200
commit 857caa5fc69b92e781457a1b67a89aa051c2d70f (patch)
tree 7437d7f6345f9dea81f4203517549c48fa971eae
parent b9097800f4f997de2325bc9e588e6caea7a563c7 (diff)
tdf#79049 speed up OOXML workbook load

Bisected with: bibisect-linux64-7.2

Adding Cc: to Noel Grandin
Comment 3 Terrence Enger 2021-07-22 15:22:38 UTC
Adding see-also bug 107654
Comment 4 m.a.riosv 2021-10-16 20:41:19 UTC
*** Bug 145177 has been marked as a duplicate of this bug. ***
Comment 5 Commit Notification 2021-10-29 11:42:33 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/31315fea28ad327f36c0e593156bf808c7af3467

tdf#143392 fix title on Base window

It will be available in 7.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2021-10-30 12:27:33 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "libreoffice-7-2":

https://git.libreoffice.org/core/commit/6a94729cba8d452f5390672b69843607f7287dba

tdf#143392 fix title on Base window

It will be available in 7.2.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.