tdf#143392 fix title on Base window

regression from
    commit 857caa5fc69b92e781457a1b67a89aa051c2d70f
    tdf#79049 speed up OOXML workbook load

Change-Id: Ia2d55386a7508dc2bbb2fa8501b45c3f30ad6a75